# my-place

./: README.md  main.pyw  pyproject.toml
src/my_place/: __init__.py  utils.py
src/my_place/core/networking/: chat_network.py  client.py  interface.py  server.py
src/my_place/ui/: app.py  home.py
src/my_place/ui/screens/: chat.py  client.py  home.py  login.py  server.py
src/my_place/ui/widgets/: custom.py
tests/: test_client.py  test_server.py
