[project]
name = "my-place"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Carlyn", email = "davidecarlyn@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.13",
    "kivy>=2.3.1",
    "pyinstaller>=6.12.0",
]

[project.scripts]
my-place = "my_place:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
